insert comments from students

--- a/mo.tex
+++ b/mo.tex
@@ -52,7 +52,7 @@ B\GL_1 S^{n-1} \times B\GL_1 S^{m-1} \arrow{r} & B\GL_1 S^{n+m-1}.
 \begin{corollary}
 There is a map of $H$--spaces $J_{\R}\co BO \to B\GL_1 \S$ called the \textit{stable $J$--homomorphism}. \qed
 \end{corollary}
-\noindent Finally, we can ask about the compatibility of $T$ with all of this:\todo{The right place to address dimension is here.  $T$, as defined above, does not extend to a functor off of the system $\{BhAut(S^{n-1})\}$ unless you reduce each Thom complex by the appropriate dimension shift.}
+\noindent Finally, we can ask about the compatibility of $T$ with all of this:\todo{The right place to address dimension is here.  $T$, as defined above, does not extend to a functor off of the system $\{BhAut(S^{n-1})\}$ unless you reduce each Thom complex by the appropriate dimension shift.  So, you should define a stable Thom spectrum functor.}
 \begin{lemma}\label{ThomSpacesAreMonoidal}
 $T$ is monoidal: it carries external fiberwise joins to smash products of Thom spaces. \qed
 \end{lemma}
@@ -289,6 +289,7 @@ A $\mathbb G_m$--action on $\Spec R$ is equivalent data to a coaction map \[\alp
 
 This notion from algebraic geometry is somewhat different from what we are used to in algebraic topology, as it is designed to deal with things like polynomial rings (where the difference of two polynomials can lie in lower degree), but in classical algebraic topology we only ever encounter sums of terms with homogeneous degree.  We can modify our perspective very slightly to arrive at the algebraic geometers': replace $H\F_2$ by the periodified spectrum \[H\F_2P = \bigvee_{j=-\infty}^\infty \Susp^j H\F_2.\]  This spectrum has the property that $H\F_2P^0(X)$ is isomorphic to $H\F_2^*(X)$ as ungraded rings, but now we can make sense of the sum of two classes which used to live in different $H\F_2$--degrees.  At this point we can manually craft the desired coaction map $\alpha^*$ so that we are in the situation of \Cref{GradedAndGmEquivAgree}, but we will shortly find that algebraic topology gifts us with it on its own.
 
+\todo{You can do a better job of describing where the Steenrod coaction comes from, rather than resting on duality.  For instance, you could at least justify \emph{why the Steenrod algebra is a Hopf algebra}.  Already, that's kind of unclear.}
 Our route to finding this internally occurring $\alpha^*$ is by turning to the next supplementary structure: the action of the Steenrod algebra.  Naively approached, this does not fit into the framework we've been sketching so far: the Steenrod algebra is a \emph{noncommutative} algebra, and so the action map \[\mathcal A^* \otimes H\F_2^* X \to H\F_2^* X\] will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, since the Cartan formula expressing the diagonal on $\mathcal A^*$ is evidently symmetric: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]  \todo{Reminder for jhfung: $\mathcal A^*$ is a Hopf algebra with comultiplication $\Sq^n \mapsto \sum_{i + j = n} \Sq^i \otimes \Sq^j$, so $\mathcal{A}_*$ is also a Hopf algebra.}  Second, if $X$ is a \emph{finite} complex, then tinkering with Spanier--Whitehead duality\todo{I see that if $X$ is a finite complex, it has a Spanier--Whitehead dual, but I don't see how to use this.  Is $\lambda^*$ not just the composition $H\mathbb{F}_2^* X = \mathbb{F}_2 \otimes H\mathbb{F}_2^* X \to H\mathbb{F}_2^* X \otimes \mathcal A^* \otimes \mathcal A_* \xrightarrow{\lambda \otimes 1} H\mathbb{F}_2^* X \otimes \mathcal{A}_*$?} gives rise to a coaction map \[\lambda^*: H\F_2^* X \to H\F_2^* X \otimes \mathcal A_*,\] which we will then re-interpret as an action map \[\alpha: \Spec \mathcal A_* \times X_{H\F_2} \to X_{H\F_2}.\]  Milnor works out the Hopf algebra structure of $\mathcal A_*$, by defining elements $\xi_j \in \mathcal A_*$ dual to $\Sq^{2^{j-1}} \cdots \Sq^{2^0} \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in H\F_2^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j.\]  Notice that we can take the limit $n \to \infty$ to get a well-defined infinite sum, provided we permit ourselves to make sense of such a thing.  He then makes the following calculation, stable in $n$:
 \begin{align*}
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coassociativity)} \\
